Made my changes

--- a/risk_forecasting.ipynb
+++ b/risk_forecasting.ipynb
@@ -21,21 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinear_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LogisticRegression\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m accuracy_score, classification_report, confusion_matrix, roc_auc_score, roc_curve\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import necessary libraries\n",
     "import numpy as np\n",
@@ -46,77 +34,131 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Set a random seed for reproducibility\n",
-    "np.random.seed(42)\n",
     "\n",
+    "# Set a random seed for reproducibility\n",
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 1: Data Preprocessing - Generate Synthetic Data\n",
-    "# -----------------------------------------------------\n",
+    "# ----------------------------------------------------\n",
     "# Creating a synthetic dataset with finance-related features\n",
+    "\n",
     "n_samples = 500\n",
     "data = pd.DataFrame({\n",
-    "    'income': np.random.normal(50000, 15000, n_samples),      # Average income around $50,000\n",
-    "    'age': np.random.randint(18, 65, n_samples),              # Customer age between 18 and 65\n",
-    "    'account_balance': np.random.normal(10000, 5000, n_samples) # Average account balance around $10,000\n",
+    "    'income': np.random.normal(50000, 15000, n_samples),           # Average income around $50,000\n",
+    "    'age': np.random.randint(18, 65, n_samples),                   # Customer age between 18 and 65\n",
+    "    'account_balance': np.random.normal(10000, 5000, n_samples)    # Average account balance around $10,000\n",
     "})\n",
     "\n",
     "# Define target: customers with higher income, moderate age, and higher balances are more likely to subscribe\n",
     "data['subscribed'] = ((data['income'] > 60000) & (data['age'] < 50) & (data['account_balance'] > 12000)).astype(int)\n",
     "\n",
-    "# Display the first few rows of the dataset\n",
     "print(\"Sample Data:\")\n",
-    "print(data.head())\n",
-    "\n",
-    "# Step 2: Define Features and Target\n",
+    "print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Define Features, Assign Target and Split Data into Training and Testing Sets\n",
     "# ----------------------------------\n",
-    "# Our target variable is 'subscribed', which indicates whether the customer subscribed to the product (1) or not (0).\n",
     "# Our features are 'income', 'age', and 'account_balance'.\n",
-    "X = data[['income', 'age', 'account_balance']]\n",
+    "# Our target variable is 'subscribed', which indicates whether the customer subscribed to the product (1) or not (0).\n",
+    "\n",
+    "x = data[['income', 'age', 'account_balance']]\n",
     "y = data['subscribed']\n",
     "\n",
-    "# Step 3: Split the Data into Training and Testing Sets\n",
-    "# -----------------------------------------------------\n",
     "# Splitting the data with 80% for training and 20% for testing\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Step 4: Initialize and Train the Logistic Regression Model\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: Initialize and Train the Logistic Regression Model\n",
     "# ----------------------------------------------------------\n",
-    "# Creating the logistic regression model\n",
+    "# Creating the logistic regression model using sklearn\n",
+    "\n",
     "model = LogisticRegression()\n",
     "\n",
     "# Training the model on the training data\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Step 5: Make Predictions on the Test Set\n",
+    "model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 4: Make Predictions on the Test Set\n",
     "# ----------------------------------------\n",
     "# Predict the class labels for the test set\n",
-    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "y_pred = model.predict(x_test)\n",
     "\n",
     "# Predict the probabilities for the positive class (subscribed = 1)\n",
-    "y_pred_prob = model.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "# Step 6: Evaluate the Model\n",
+    "y_pred_prob = model.predict_proba(x_test)[:, 1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 5: Evaluate the Model\n",
     "# --------------------------\n",
     "# Calculate and print the accuracy of the model\n",
+    "\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f\"Accuracy: {accuracy:.2f}\")\n",
     "\n",
     "# Generate a classification report to show precision, recall, and F1-score\n",
     "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, y_pred))\n",
-    "\n",
-    "# Step 7: Confusion Matrix Visualization\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 6: Confusion Matrix Visualization\n",
     "# --------------------------------------\n",
     "# Create a confusion matrix to show true positives, true negatives, false positives, and false negatives\n",
+    "\n",
     "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "sns.heatmap(conf_matrix, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False)\n",
     "plt.title(\"Confusion Matrix\")\n",
     "plt.xlabel(\"Predicted\")\n",
     "plt.ylabel(\"Actual\")\n",
-    "plt.show()\n",
-    "\n",
-    "# Step 8: ROC Curve and AUC\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 7: ROC Curve and AUC\n",
     "# -------------------------\n",
     "# Calculate the AUC-ROC score\n",
+    "\n",
     "roc_auc = roc_auc_score(y_test, y_pred_prob)\n",
     "\n",
     "# Generate the false positive rate and true positive rate for the ROC curve\n",
@@ -124,7 +166,7 @@
     "\n",
     "# Plot the ROC curve\n",
     "plt.plot(fpr, tpr, label=f\"AUC = {roc_auc:.2f}\")\n",
-    "plt.plot([0, 1], [0, 1], 'k--')  # Diagonal line for reference\n",
+    "plt.plot([0, 1], [0, 1], 'k--')                    # Diagonal line for reference\n",
     "plt.xlabel(\"False Positive Rate\")\n",
     "plt.ylabel(\"True Positive Rate\")\n",
     "plt.title(\"ROC Curve\")\n",
