--- a/risk_forecasting.ipynb
+++ b/risk_forecasting.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example of a Logistical Model"
+    "# Example of a Logistical Regression Model"
    ]
   },
   {
@@ -201,8 +201,15 @@
     "import seaborn as sns\n",
     "\n",
     "# Set a random seed for reproducibility\n",
-    "np.random.seed(42)\n",
-    "\n",
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 1: Data Preprocessing - Generate Synthetic Data\n",
     "# -----------------------------------------------------\n",
     "# Creating a synthetic dataset with features relevant to credit risk forecasting\n",
@@ -219,49 +226,98 @@
     "\n",
     "# Display sample data for reference\n",
     "print(\"Sample Credit Data:\")\n",
-    "print(credit_data.head())\n",
-    "\n",
+    "print(credit_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 2: Define Features and Target\n",
     "# ----------------------------------\n",
     "# Define target variable (y) and feature variables (X)\n",
     "X = credit_data[['credit_score', 'income', 'debt_ratio', 'loan_amount']]\n",
-    "y = credit_data['default']\n",
-    "\n",
+    "y = credit_data['default']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 3: Split the Data into Training and Testing Sets\n",
     "# -----------------------------------------------------\n",
     "# Splitting the data with 80% for training and 20% for testing\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 4: Feature Scaling\n",
     "# -----------------------\n",
     "# Standardize features by removing the mean and scaling to unit variance\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)  # Fit and transform training data\n",
-    "X_test = scaler.transform(X_test)        # Transform test data using the same scaler\n",
-    "\n",
+    "X_test = scaler.transform(X_test)        # Transform test data using the same scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 5: Handle Class Imbalance Using SMOTE\n",
     "# ------------------------------------------\n",
     "# Synthetic Minority Over-sampling Technique (SMOTE) to balance classes\n",
     "# In cases where 'default' is underrepresented, SMOTE creates synthetic samples of the minority class\n",
     "smote = SMOTE(random_state=42)\n",
-    "X_train, y_train = smote.fit_resample(X_train, y_train)\n",
-    "\n",
+    "X_train, y_train = smote.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 6: Initialize and Train the Logistic Regression Model\n",
     "# ----------------------------------------------------------\n",
     "# Initialize the logistic regression model\n",
     "model = LogisticRegression()\n",
     "\n",
     "# Train the model on the training data\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 7: Make Predictions on the Test Set\n",
     "# ----------------------------------------\n",
     "# Predict the class labels for the test set\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
     "# Predict the probabilities for the positive class (default = 1)\n",
-    "y_pred_prob = model.predict_proba(X_test)[:, 1]\n",
-    "\n",
+    "y_pred_prob = model.predict_proba(X_test)[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 8: Evaluate the Model\n",
     "# --------------------------\n",
     "# Calculate and print the accuracy of the model\n",
@@ -270,8 +326,15 @@
     "\n",
     "# Generate a classification report to show precision, recall, and F1-score\n",
     "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, y_pred))\n",
-    "\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 9: Confusion Matrix Visualization\n",
     "# --------------------------------------\n",
     "# Create a confusion matrix to show true positives, true negatives, false positives, and false negatives\n",
@@ -280,8 +343,15 @@
     "plt.title(\"Confusion Matrix\")\n",
     "plt.xlabel(\"Predicted\")\n",
     "plt.ylabel(\"Actual\")\n",
-    "plt.show()\n",
-    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 10: ROC Curve and AUC\n",
     "# --------------------------\n",
     "# Calculate the AUC-ROC score\n",
@@ -297,14 +367,21 @@
     "plt.ylabel(\"True Positive Rate\")\n",
     "plt.title(\"ROC Curve\")\n",
     "plt.legend(loc=\"lower right\")\n",
-    "plt.show()\n",
-    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 11: Interpret Model Coefficients\n",
     "# -------------------------------------\n",
     "# Coefficients provide insights into the impact of each feature on the probability of default\n",
     "coefficients = pd.DataFrame({\"Feature\": X.columns, \"Coefficient\": model.coef_[0]})\n",
     "print(\"\\nLogistic Regression Coefficients:\")\n",
-    "print(coefficients)\n"
+    "print(coefficients)"
    ]
   }
  ],
