--- a/main.ipynb
+++ b/main.ipynb
@@ -74,21 +74,19 @@
    "metadata": {},
    "source": [
     "**What is Option Pricing**\n",
-    "- Formal definition of an [option](https://corporatefinanceinstitute.com/resources/derivatives/option-pricing-models/) states that it is a type of contract between two parties that provides one party the right, but **not** the oblidation, to buy or sell the underlying asset at a predetermined price before or at expirations day.\n",
+    "- Formal definition of an [option](https://corporatefinanceinstitute.com/resources/derivatives/option-pricing-models/) states that it is a type of contract between two parties that provides one party the right, but **not** the obligation, to buy or sell the underlying asset at a predetermined price before or at expiration day.\n",
     "\n",
     "    - Call option = buying\n",
     "    - Put option = selling\n",
     "\n",
     "- Buying or selling an option comes with a price called the option's premium. Buyer of an option pay the premium and sellers receive the premium\n",
     "\n",
-    "- Factors determining the value of an option:\n",
+    "- Some common factors determining the value of an option:\n",
     "\n",
-    "    - Current stock price\n",
-    "    - Intrinsic value\n",
+    "    - [Intrinsic value](https://www.investopedia.com/terms/i/intrinsicvalue.asp)\n",
     "    - Time to expiration\n",
     "    - Volatility\n",
     "    - Interest rates\n",
-    "    - Cash dividends paid\n",
     "\n",
     "(ie. price of a stock rises -> likely price of call option will rise and the price of a put option will fall, vice versa)\n",
     "\n",
@@ -98,30 +96,23 @@
     "    - Trinomial Model\n",
     "    - Black-Scholes Model\n",
     "    - Monte-Carlo Simulation\n",
-    "    \n"
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Black-Scholes (1973)**\n",
+    "## Black-Scholes\n",
     "\n",
     "- One of the most commonly used formula to price call and put options, there are many variations of this formula.\n",
     "- Model was first discovered in 1973 by economists Fischer black and Myron Scholes, developed mainly for pricing European options on stocks.\n",
     "\n",
     "- Some assumptions:\n",
     "    - Stock Price Distribution : continuously compounded returns on the stock are normally distributed and independent over time, volatility of continuously compounded returns is known and constant, future dividends are known (as a dollar amount/fixed dividend yield)\n",
-    "    - Economic Environment : risk-free rate is known and constant, no transaction costs or taxes, possible to short-sell with no cost and to borrow at the risk-free rate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Example Black-Scholes Code**\n",
+    "    - Economic Environment : risk-free rate is known and constant, no transaction costs or taxes, possible to short-sell with no cost and to borrow at the risk-free rate\n",
     "\n",
-    "- Code below is from [Sanskar](https://github.com/Sanskar02/OPTION_PRICING_MODEL)\n",
+    "- An example of deep learning model using Black-Scholes to predict option pricing: [Sanskar](https://github.com/Sanskar02/OPTION_PRICING_MODEL)\n",
     "- Another example model can be found [here](https://srdas.github.io/Papers/BlackScholesNN.pdf)"
    ]
   },
@@ -129,7 +120,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Generating Random Values to Simulate a Stock Option**"
+    "# Example Deep Learning Model in Option Pricing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1. Load and prepare dataset**\n",
+    "\n",
+    "- Historical option data from [AlphaVantage](https://www.alphavantage.co/)\n",
+    "- Measures and variables chosen based off factors of Black-Scholes model\n",
+    "- Extracting data for call options only\n",
+    "- Randomly generating interest rate values"
    ]
   },
   {
@@ -138,74 +141,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate random Gaussian values\n",
-    "from random import seed\n",
-    "from random import gauss\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
     "\n",
-    "# seed random number generator\n",
-    "seed(1)\n",
+    "# Load the CSV file\n",
+    "file_path = 'C:/Users/ziyin/OneDrive/Desktop/intro-to-ml/historical_options_IBM.csv'\n",
+    "data = pd.read_csv(file_path)\n",
     "\n",
+    "# Convert 'expiration' and 'date' columns to datetime format\n",
+    "data['expiration'] = pd.to_datetime(data['expiration'])\n",
+    "data['current'] = pd.to_datetime(data['date'])\n",
     "\n",
-    "# generting Stock Price(S) vector\n",
-    "list1 =[]\n",
-    "# Generates 10000 simulated stock prices\n",
-    "for i in range(10000):\n",
-    "    # Stock prices assumed to drawn from normal distribution with mean of 250 and standard deviation of 50.11\n",
-    "    k = gauss(250,50.11)\n",
-    "    # Rounds up generated value to two decimal places\n",
-    "    list1.append(round(k,2))\n",
-    "    \n",
+    "# Calculate time to expiration (T) in years\n",
+    "today = datetime.now().date()\n",
+    "data['T'] = (data['expiration'].dt.date - data['current'].dt.date).apply(lambda x: x.days) / 365\n",
     "\n",
-    "# generating Strike Price(K) vector\n",
-    "list2 =[]\n",
-    "for i in range(10000):\n",
-    "    k = 0\n",
-    "    # Generate non-negative stricke prices with mean of 322.6 and standard deviation of 65.9\n",
-    "    k = abs(gauss(322.6,65.9))\n",
-    "    while round(k,2) >= list1[i]:\n",
-    "        k = abs(gauss(322.6,65.9))\n",
-    "    list2.append(round(k,2))\n",
-    "    \n",
+    "filtered_data = data[data['type']=='call']\n",
     "\n",
-    "# generate maturity time vector\n",
-    "list3 =[]\n",
-    "for i in range(10000):\n",
-    "    k = gauss(541.4,111)\n",
-    "    # Rounds generated values to 4 decimal places and converts value from days to years\n",
-    "    list3.append(round(int(round(k,2))/365,4))\n",
-    "    \n",
+    "# Map relevant columns to the desired format, and add placeholders if necessary\n",
+    "df_formatted = filtered_data.rename(columns={\n",
+    "    'last': 'S',                # Use 'last' as a placeholder for spot price if applicable\n",
+    "    'strike': 'K',\n",
+    "    'implied_volatility': 'sigma'\n",
+    "})\n",
     "\n",
-    "# generate dividend gain vector    \n",
-    "list4 =[]\n",
-    "for i in range(10000):\n",
-    "    k = gauss(1.5,0.31)\n",
-    "    list4.append(round(round(k,2)/100,6))\n",
-    "    \n",
-    "    \n",
-    "# generate risk free interst rate vector\n",
-    "list5 =[]\n",
-    "for i in range(10000):\n",
-    "    k = gauss(2.05,0.2)\n",
-    "    list5.append(round(round(k,2)/100,6))\n",
+    "# Add placeholders and 'r' (risk-free rate)\n",
+    "df_formatted['r'] = 0.01  # Placeholder for a standard risk-free rate\n",
     "\n",
     "\n",
-    "# generate volatality vector\n",
-    "list6 =[]\n",
-    "for i in range(10000):\n",
-    "    k = gauss(30,10)\n",
-    "    list6.append(round(round(k,2)/100,4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def listOfTuples(l1, l2,l3,l4,l5,l6): \n",
-    "    return list(map(lambda x, y,z,w,i,o:(x,y,z,w,i,o), l1, l2,l3,l4,l5,l6)) \n",
-    "\n",
-    "p = listOfTuples(list1,list2,list3,list4,list5,list6)"
+    "# Create a new DataFrame that only contains the desired columns\n",
+    "df = df_formatted[['S', 'K', 'T', 'r', 'sigma']]\n"
    ]
   },
   {
@@ -221,8 +186,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame(p, columns=[\"S\",\"K\",\"T\",\"q\",\"r\",\"sigma\"])\n",
     "df.head(50)"
    ]
   },
@@ -232,42 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import scipy.stats as si\n",
-    "import sympy as sy\n",
-    "from sympy.stats import Normal, cdf\n",
-    "from sympy import init_printing\n",
-    "init_printing()\n",
-    "\n",
-    "# Function to define the Black-Scholes model\n",
-    "def black_scholes_call_div(S, K, T, r, q, sigma):\n",
-    "    \n",
-    "    #S: spot price (Price of underlying asset)\n",
-    "    #K: strike price\n",
-    "    #T: time to maturity\n",
-    "    #r: interest rate\n",
-    "    #q: rate of continuous dividend paying asset \n",
-    "    #sigma: volatility\n",
-    "    \n",
-    "    # Two intermediate variables used in Black-Scholes formula\n",
-    "    d1 = (np.log(S / K) + (r - q + 0.5 * sigma ** 2) * T) / (sigma * np.sqrt(T))\n",
-    "    d2 = (np.log(S / K) + (r - q - 0.5 * sigma ** 2) * T) / (sigma * np.sqrt(T))\n",
-    "    \n",
-    "   \n",
-    "    call =  (S * np.exp(-q * T) * si.norm.cdf(d1, 0.0, 1.0) - K * np.exp(-r * T) * si.norm.cdf(d2, 0.0, 1.0))\n",
-    "    \n",
-    "    # Returning calculated call option prices\n",
-    "    return round(call,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Applting the Black-Scholes function to the randomly generated dataset\n",
-    "df['C'] = df.apply(lambda row : black_scholes_call_div(row['S'], row['K'], row['T'],row['r'],row['q'],row['sigma']),axis = 1)\n",
+    "# Retrieving call values from spreadsheet\n",
+    "df['C'] = filtered_data['bid']\n",
     "df.head(50)"
    ]
   },
@@ -277,9 +206,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Saving the DataFrame for efficient reload\n",
-    "df.to_pickle(\"option_dataset\")\n",
-    "\n",
     "# Creating new DataFrame object df1 that points to same objects as df\n",
     "df1 = df.copy()"
    ]
@@ -368,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test"
+    "X_test\n"
    ]
   },
   {
@@ -446,10 +372,10 @@
     "\n",
     "# Hidden layers\n",
     "model.add(Dense(nodes, activation='elu'))\n",
-    "model.add(Dropout(0.25))\n",
+    "model.add(Dropout(0.15))\n",
     "\n",
     "model.add(Dense(nodes, activation='relu'))\n",
-    "model.add(Dropout(0.25))\n",
+    "model.add(Dropout(0.35))\n",
     "\n",
     "model.add(Dense(nodes, activation='elu'))\n",
     "model.add(Dropout(0.25))\n",
@@ -505,15 +431,6 @@
     "    stats = dict()\n",
     "\n",
     "    stats['diff'] = y - y_hat\n",
-    "    \n",
-    "    \n",
-    "    #plot histogram to show the distribution of the differences between actual and predicted\n",
-    "    mpl.rcParams['agg.path.chunksize'] = 100000\n",
-    "    #figure(figsize=(14,10))\n",
-    "    plt.scatter(y, y_hat,color='black',linewidth=0.3,alpha=0.4, s=0.5)\n",
-    "    plt.xlabel('Actual Price',fontsize=20,fontname='Times New Roman')\n",
-    "    plt.ylabel('Predicted Price',fontsize=20,fontname='Times New Roman') \n",
-    "    plt.show()\n",
     "    \n",
     "    #figure(figsize=(14,10))\n",
     "    plt.hist(stats['diff'], bins=50,edgecolor='black',color='white')\n",
